Reworked command handling, added non-required flags